electron/src-tauri/build_errors_v4.txt
    Checking app v0.1.0 (/Users/ethew/Documents/Github/methil-vibe/electron/src-tauri)
warning: unused imports: `Deserialize` and `Serialize`
 --> src/core/tools.rs:2:13
  |
2 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0609]: no field `id` on type `&std::string::String`
   --> src/main.rs:173:87
    |
173 |                 "models": lm_studio_models.iter().map(|m| serde_json::json!({ "id": m.id, "name": m.id })).collect::<Vec<_>>()
    |                                                                                       ^^ unknown field

error[E0609]: no field `id` on type `&std::string::String`
   --> src/main.rs:173:101
    |
173 |                 "models": lm_studio_models.iter().map(|m| serde_json::json!({ "id": m.id, "name": m.id })).collect::<Vec<_>>()
    |                                                                                                     ^^ unknown field

warning: unused variable: `persona`
  --> src/core/agent.rs:53:9
   |
53 |         persona: Option<String>,
   |         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_persona`
   |
   = note: `#[warn(unused_variables)]` on by default

For more information about this error, try `rustc --explain E0609`.
warning: `app` (bin "app") generated 2 warnings
error: could not compile `app` (bin "app") due to 2 previous errors; 2 warnings emitted
